--- a/modificaciones.html
+++ b/modificaciones.html
@@ -125,7 +125,7 @@
                     //imagenActual.src = './static/img/' + imagen_url;
                     
                     //Al subir al servidor, deberá utilizarse la siguiente ruta. USUARIO debe ser reemplazado por el nombre de usuario de Pythonanywhere
-                    imagenActual.src = `https://www.pythonanywhere.com/user/veritocapito/files/home/veritocapito/mysite/static/img/${producto.imagen_url}`;
+                    imagenActual.src = 'https://www.pythonanywhere.com/user/veritocapito/files/home/veritocapito/mysite/static/img/' + imagen_url;
                     
                     imagenActual.style.display = 'block'; // Muestra la imagen actual
                 } else {
